<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <EditTextPreference
        android:icon="@drawable/home"
        android:key="home-server"
        android:defaultValue="https://dybr.ru/v2"
        android:hint="@string/api_home_server_hint"
        android:title="@string/api_home_server"
        android:summary="@string/api_home_server_sum"/>

    <CheckBoxPreference
        android:icon="@drawable/community"
        android:key="apply-blog-theme"
        android:defaultValue="true"
        android:title="@string/apply_blog_theme"
        android:summaryOn="@string/apply_blog_theme_on"
        android:summaryOff="@string/apply_blog_theme_off"/>

    <CheckBoxPreference
        android:icon="@drawable/image"
        android:key="auto-load-images"
        android:defaultValue="true"
        android:title="@string/auto_load_images"
        android:summaryOn="@string/auto_load_images_on"
        android:summaryOff="@string/auto_load_images_off"/>

</PreferenceScreen>