<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="8dp"
    tools:context=".ProfileFragment">

    <ImageView
        android:id="@+id/author_avatar"
        android:layout_width="144dp"
        android:layout_height="144dp"
        android:layout_marginStart="16dp"
        android:padding="4dp"
        android:scaleType="centerCrop"
        android:contentDescription="@string/user_avatar" />

    <ImageView
        android:id="@+id/author_add_to_favorites"
        android:theme="@style/Ripple.Item"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_alignTop="@+id/author_avatar"
        android:layout_toEndOf="@+id/author_avatar"
        android:padding="4dp"
        android:src="@drawable/account_favorited"
        android:scaleType="fitCenter"
        android:contentDescription="@string/add_to_favorites" />

    <ImageView
        android:id="@+id/author_feed_ban"
        android:theme="@style/Ripple.Item"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_below="@+id/author_add_to_favorites"
        android:layout_toEndOf="@+id/author_avatar"
        android:padding="4dp"
        android:src="@drawable/account_feed_unbanned"
        android:scaleType="fitCenter"
        android:contentDescription="@string/ban_from_feed"
        android:visibility="invisible"/>

    <ImageView
        android:id="@+id/author_ban"
        android:theme="@style/Ripple.Item"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_below="@+id/author_feed_ban"
        android:layout_toEndOf="@+id/author_avatar"
        android:padding="4dp"
        android:src="@drawable/account_unbanned"
        android:scaleType="fitCenter"
        android:contentDescription="@string/ban"
        android:visibility="invisible"/>

    <TextView
        android:id="@+id/author_name_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/author_avatar"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:padding="4dp"
        android:text="@string/author_name_label"/>

    <TextView
        android:id="@+id/author_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/author_avatar"
        android:layout_toEndOf="@+id/author_name_label"
        android:layout_marginTop="16dp"
        android:padding="4dp"
        android:text="@string/placeholder_short"/>

    <TextView
        android:id="@+id/author_subtext_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/author_name"
        android:layout_marginTop="8dp"
        android:layout_marginStart="16dp"
        android:padding="4dp"
        android:text="@string/subtext"/>

    <TextView
        android:id="@+id/author_subtext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/author_name"
        android:layout_toEndOf="@+id/author_subtext_label"
        android:layout_marginTop="8dp"
        android:padding="4dp"
        android:text="@string/placeholder_short"/>

    <TextView
        android:id="@+id/author_registration_date_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/author_subtext"
        android:layout_marginTop="8dp"
        android:layout_marginStart="16dp"
        android:padding="4dp"
        android:text="@string/registration_date_label"/>

    <TextView
        android:id="@+id/author_registration_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/author_registration_date_label"
        android:layout_below="@id/author_subtext"
        android:layout_marginTop="8dp"
        android:padding="4dp"
        android:text="@string/placeholder_short"/>

    <TextView
        android:id="@+id/author_blog_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/author_registration_date"
        android:layout_marginTop="8dp"
        android:layout_marginStart="16dp"
        android:padding="4dp"
        android:text="@string/blog_label"/>

    <TextView
        android:id="@+id/author_blog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/author_blog_label"
        android:layout_below="@id/author_registration_date"
        android:layout_marginTop="8dp"
        android:padding="4dp"
        android:textStyle="bold"
        android:text="@string/placeholder_short"/>

</RelativeLayout>